--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.27.2",
     "gh-pages": "^3.2.3",
     "react": "^18.1.0",
+    "react-app-polyfill": "^3.0.0",
     "react-dom": "^18.1.0",
     "react-icons": "^4.3.1",
     "react-redux": "^8.0.1",
@@ -37,12 +38,14 @@
     "production": [
       ">0.2%",
       "not dead",
-      "not op_mini all"
+      "not op_mini all",
+      "IE 11"
     ],
     "development": [
       "last 1 chrome version",
       "last 1 firefox version",
-      "last 1 safari version"
+      "last 1 safari version",
+      "IE 11"
     ]
   }
 }
