--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "phishman-test",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://andrew-sparrow.github.io/phishman-test",
   "dependencies": {
     "@ant-design/icons": "^4.7.0",
     "@reduxjs/toolkit": "^1.8.1",
